test/asm/double-purge.err
error: double-purge.asm(3):
    'n' was already purged
error: Assembly aborted (1 error)!
